<resources>
    <string name="app_name">MED365 for Doctors</string>
    <string name="title_activity_test">DB Connect</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="App">MED365 Login</string>
    <string name="LoginStatus">Login Status</string>
    <string name="title_activity_hospital_data">Reports</string>


    <string name="title_section1">Collection </string>
    <string name="title_section2">Day Report</string>
    <string name="title_section3">Sales Report</string>
    <string name="title_section4">Invoice Report</string>
    <string name="date">From</string>
    <string name="opdToDate">To</string>
    <string name="spinner_title">Select Type</string>
    <string-array name="type">
        <item>All Modes</item>
        <item>Cash</item>
        <item>Cheque</item>
        <item>Mediclaim</item>
    </string-array>
    <string name="search">Search</string>

    <string name="title_activity_splashscreen">MED365</string>
    <string name="title_activity_navigation">MED 365</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="latitude_label">Latitude: </string>
    <string name="longitude_label">Longitude: </string>

    <string name="start_updates">Daily Reports</string>
    <string name="stop_updates">Stop updates</string>

    <string name="last_update_time_label">Last location update time: </string>

    <string name="location_updated_message">Location updated</string>
    <string name="title_activity_tracking">Track MR</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Reports</item>
        <item >Track MR</item>
        <item >DashBoard</item>
        <item >Generic Medicines</item>
        <item >Search Doctors</item>
        <item ></item>
        <item ></item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@mipmap/home_action</item>
        <item>@mipmap/report</item>
        <item>@mipmap/trackmr</item>
        <item>@mipmap/menu</item>
        <item>@mipmap/gen_meds</item>
        <item>@mipmap/search_doctors</item>
        <item></item>
        <item></item>
    </array>

    <string-array name="places">
        <item>Select Your Location</item>
        <item>Hyderabad</item>
        <item>Jaipur</item>
    </string-array>
    <string name="location">Select Your Location</string>
    <string name="title_activity_nav_drawer">MED365</string>
    <string name="desc_list_item_icon">MED365</string>

    <string name="aboutUs">About Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="logOut">Log Out</string>
    <string name="shareApp">Share the app</string>
    <string name="title_activity_search_doctors">SearchDoctors</string>
    <string name="title_activity_find_doctors">Find Doctos</string>
    <string name="title_activity_generic_medicines">GenericMedicines</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
</resources>
