<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.configaware.med365doctors.SearchDoctors">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item
        android:id="@+id/action_aboutUs"
        android:title="@string/aboutUs"
        android:icon="@mipmap/aboutus"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/action_contactUs"
        android:title="@string/contactUs"
        app:showAsAction="never"
        android:icon="@mipmap/contact"
        />


    <item
        android:id="@+id/action_shareApp"
        android:title="@string/shareApp"
        android:icon="@mipmap/share"
        app:showAsAction="never"
        />


</menu>
