<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datePickers">

        <EditText
            android:id="@+id/tpaDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tpaToDate"
            android:layout_weight="1"
            android:hint="@string/opdToDate"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectSearch"
        android:layout_below="@+id/datePickers">

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tpatypeSelect"
            android:layout_weight="1"
            android:spinnerMode="dropdown"
            android:entries="@array/type"
            android:prompt="@string/spinner_title"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:id="@+id/tpaButton"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tpaText"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_below="@+id/selectSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>